--- a/welcome.css
+++ b/welcome.css
@@ -158,3 +158,23 @@ body {
 #darker {
   background-color: rgba(48, 48, 48, 0.301);
 }
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #262626;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
