--- a/welcome.css
+++ b/welcome.css
@@ -128,6 +128,7 @@ body {
   width: auto;
   height: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .profileName {
@@ -136,10 +137,13 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  cursor: pointer;
+  margin-left: 1rem;
 }
 
 .profileArrowDown {
   font-size: 1rem;
+  cursor: pointer;
 }
 .background-card {
   background-color: rgba(128, 128, 128, 0.301);
