--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@
 }
 
 #playlist-container {
-    width: 100%;
-    height: 70vh;
+    margin-top: -42.5em;
     background: linear-gradient(0deg, rgba(19,18,19,1) 0%, rgba(80,81,81,1) 80%, rgba(80,81,81,1) 100%);
 }
 
@@ -34,10 +33,27 @@
     color: blue;
 }
 
-#pause-button {
-    background: radial-gradient(circle 26px, white, rgba(80,81,81,1));
-    font-size: 48px;
+/* #pause-button {
+    /* background: radial-gradient(circle 26px, white, rgba(80,81,81,1)); */
+    /* font-size: 48px;
     color: #1db954;
+} */ */
+
+.pauseButton {
+    background-color: rgb(14, 236, 88);
+    width: 2.5vw;
+    aspect-ratio: 1/1;
+    overflow: hidden;
+    font-size: 2vh;
+}
+
+#pause-button {
+    font-size: 56px;
+    color: #1db954;
+}
+
+#playlist-container > div.row.d-flex.justify-content-start {
+    gap: 5;
 }
 
 #follow {
@@ -72,3 +88,100 @@ h2 {
     color: var(--color-text-primary);
     list-style-type: none;
 }
+
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #262626;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  /* Navbar */
+  
+  #first {
+    background-color: black;
+    font-size: 1vh;
+  }
+  #logo {
+    width: 10vw;
+  }
+  #nav-1 .nav-link,
+  #nav-2 .nav-link,
+  #nav-4 .nav-link {
+    color: white;
+  }
+  #nav-3 .nav-link {
+    color: grey;
+  }
+  #nav-3 .nav-link:hover {
+    color: white;
+    background-color: rgba(128, 128, 128, 0.206);
+  }
+  #nav-1 .nav-link:hover,
+  #nav-2 .nav-link:hover {
+    background-color: rgba(128, 128, 128, 0.206);
+    color: white;
+  }
+  
+  #nav-3 {
+    overflow: hidden;
+    overflow-y: scroll;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+  .navHomeDiv {
+    width: 2vw;
+    aspect-ratio: 1/1;
+    font-size: 2vh;
+    font-weight: lighter;
+  }
+  .navIconDivs {
+    min-width: 2vw;
+    aspect-ratio: 1/1;
+    font-size: 1.5vh;
+    font-weight: lighter;
+  }
+  
+  .creatPlaylistDiv {
+    min-width: 2vw;
+    aspect-ratio: 1/1;
+    background-color: lightgrey;
+    color: black;
+    font-size: 1.5vh;
+    font-weight: bolder;
+  }
+  
+  .navSpans {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
+  .navHeartDiv {
+    background: rgb(38, 8, 185);
+    background: linear-gradient(
+      133deg,
+      rgba(38, 8, 185, 1) 0%,
+      rgba(121, 90, 142, 1) 60%,
+      rgba(255, 255, 255, 1) 100%
+    );
+    min-width: 2vw;
+    aspect-ratio: 1/1;
+    color: white;
+    font-size: 1vh;
+    font-weight: bolder;
+  }
