--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 #playlist-container {
     margin-top: -42.5em;
-    background: linear-gradient(0deg, rgba(19,18,19,1) 0%, rgba(80,81,81,1) 80%, rgba(80,81,81,1) 100%);
+    background: linear-gradient(0deg, rgba(19,18,19,1) 0%, rgba(80,81,81,1) 95%, rgba(80,81,81,1) 100%);
 }
 
 #verified-btn {
@@ -40,9 +40,10 @@
 } */ */
 
 .pauseButton {
-    background-color: rgb(14, 236, 88);
+    /* background-color: rgb(14, 236, 88); */
+    color: white;
+    background-color: white;
     width: 2.5vw;
-    aspect-ratio: 1/1;
     overflow: hidden;
     font-size: 2vh;
 }
@@ -52,13 +53,9 @@
     color: #1db954;
 }
 
-#playlist-container > div.row.d-flex.justify-content-start {
-    gap: 5;
-}
-
 #follow {
     color: var(--color-text-primary);
-    padding: 5px 15px;
+    padding: 5px 7px;
     border-radius: 15%;
 }
 
@@ -82,6 +79,12 @@ h2 {
     color: var(--color-text-primary);
     border: transparent;
     cursor: pointer;
+}
+
+.album-list-cover {
+    width: auto;
+    height: 50%;
+    object-fit: cover;
 }
 
 #see-more {
@@ -184,4 +187,50 @@ h2 {
     color: white;
     font-size: 1vh;
     font-weight: bolder;
+  }
+
+  /* Music Player Bottom */
+
+.musicPlayer {
+    min-height: 101px;
+    flex-grow: 0;
+    width: auto;
+    background-color: rgb(30, 30, 30);
+    color: white;
+  }
+  
+  .playerSongImageDiv {
+    min-width: 71px;
+    max-height: 71px;
+    aspect-ratio: 1/1;
+    overflow: hidden;
+  }
+  .playerSongImage {
+    width: auto;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .playerSongTitle {
+    font-size: 0.9vh;
+    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
+  .playerSongArtist {
+    font-size: 0.8vh;
+  }
+  
+  .iconsDivPlayer {
+    font-size: 1vh;
+  }
+  
+  .iconPlay {
+    height: 2vh;
+    aspect-ratio: 1/1;
+    background-color: white;
+    color: black;
+    font-size: 1.2vh;
   }
