--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@
 
 #main-container {
     background: url("https://express-images.franklymedia.com/6616/sites/157/2020/11/09142131/Queen-Adam-Lambert-Live-around-the-world.png") no-repeat;
-    background-size: cover;
+    background-size: 100%;
     width: 100%;
-    height: 30vh;
+    height: auto;
     margin-left: auto;
     color: var(--color-text-primary);
 }
@@ -20,6 +20,8 @@
 #playlist-container {
     margin-top: -42.5em;
     background: linear-gradient(0deg, rgba(19,18,19,1) 0%, rgba(80,81,81,1) 95%, rgba(80,81,81,1) 100%);
+    overflow-y: scroll;
+    max-height: 100vh;
 }
 
 #verified-btn {
