--- a/album.css
+++ b/album.css
@@ -16,6 +16,12 @@
 }
 
 /* Scrollbar */
+
+.scrollit {
+  overflow-y: scroll;
+  height: 52vh;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -62,11 +68,21 @@
   color: white;
 }
 
-#nav-3 {
+.navActions {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.navScroll {
   overflow: hidden;
   overflow-y: scroll;
   text-overflow: ellipsis;
   white-space: nowrap;
+  height: 30vh;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .navHomeDiv {
