--- a/search.css
+++ b/search.css
@@ -11,7 +11,7 @@
 
 /* Scrollbar */
 
-.scrollit {
+.scrollitSearch {
   overflow-y: scroll;
   height: 80vh;
 }
@@ -194,6 +194,10 @@
 .options {
   background-color: rgb(43, 43, 43);
   font-weight: 400;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .active {
@@ -202,6 +206,15 @@
 }
 
 /* Table */
+
+.links {
+  text-decoration: none;
+  color: inherit;
+}
+.links:hover {
+  text-decoration: none;
+  color: inherit;
+}
 
 .table-borderless > tbody > tr > td,
 .table-borderless > tbody > tr > th,
@@ -224,6 +237,11 @@
 .tableTitle {
   font-weight: bold;
   font-size: 1vh;
+}
+
+.tableAlbum {
+  font-weight: bold;
+  font-size: 1.5vh;
 }
 
 .tableArtist {
