--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,10 @@ h1 {
 
 #follow {
     color: var(--color-text-primary);
-    padding: 5px 7px;
-    border-radius: 15%;
+    padding: 3px 15px;
+    border-radius: 10%;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 #dots {
@@ -115,9 +117,9 @@ h2 {
 }
 
 .album-list-cover {
-    width: auto;
-    height: 50%;
+    height: 70%;
     object-fit: cover;
+    margin-block: auto;
 }
 
 .current-track {
@@ -282,4 +284,13 @@ figcaption {
     background-color: white;
     color: black;
     font-size: 1.2vh;
+  }
+
+  .play-song {
+    max-height: 6.5vh;
+    padding-top: 0;
+  }
+
+  .col-md-1, .rank, .track-title, .duration, .current-track-title {
+    margin-block: auto;
   }
