--- a/welcome.css
+++ b/welcome.css
@@ -3,9 +3,10 @@ body {
 }
 #first {
   background-color: black;
-  padding-left: 3rem;
+  padding-left: 2rem;
   height: 130vh;
   overflow: auto;
+  min-width: 10rem;
 }
 #logo {
   width: 10rem;
@@ -338,14 +339,5 @@ a:hover {
 @media screen and (max-width: 1200px) {
   #first {
     height: 230vh;
-  }
-  #mainrow,
-  #cardstart,
-  #topsidecards,
-  #firstAlbumRow,
-  #secondAlbumRow {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 }
