painted targeted Songs comlete

--- a/search.css
+++ b/search.css
@@ -234,6 +234,10 @@ tr:hover {
   color: inherit;
 }
 
+.targetedTrack {
+  color: green !important;
+}
+
 .table-borderless > tbody > tr > td,
 .table-borderless > tbody > tr > th,
 .table-borderless > tfoot > tr > td,
