--- a/css/artist.css
+++ b/css/artist.css
@@ -130,7 +130,7 @@ h2 {
   border: none;
   cursor: pointer;
   background-color: transparent;
-  margin-bottom: 5vh;
+  margin-bottom: 4vh;
 }
 
 .band-pic {
@@ -310,14 +310,18 @@ figcaption {
 }
 
 .play-song {
-  max-height: 6.5vh;
+  max-height: 10.5vh;
   padding-top: 0;
 }
 
-.col-md-1,
+.targetedTrack {
+  color: green !important;
+}
+
+/* .col-md-1,
 .rank,
 .track-title,
 .duration,
 .current-track-title {
-  /* margin-block: auto; */
-}
+  margin-block: auto;
+} */
